Fix alignment of API badges in links to docs
Fixes #185 

A bit ridiculous fix, that removes all spaces that were rendered while parsing lines with code. But actual result is nicely formatted HTML code with spaces where needed and no extra line breaks. That fixes issue with `minify` command and built result is still identical to development version. At least for links to API documentation. Hopefully someone will lend a hand in cleaning up remaining problematic layouts.

--- a/assets/scss/docsy/main.scss
+++ b/assets/scss/docsy/main.scss
@@ -121,20 +121,20 @@ footer {
 
 a.api-link {
   white-space: nowrap;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
 }
 a.api-link::after {
   content: 'API';
   display: inline-block;
-  margin-left: 4px;
   width: 20px;
   height: 14px;
   color: white;
   background-color: #54a3d8;
   font-size: 0.6rem;
   border-radius: 2px;
-  vertical-align: middle;
   text-align: center;
-  bottom: 5px;
 }
 
 @import "styles_project";
